[gd_scene load_steps=17 format=2]

[ext_resource path="res://levelbumper/LevelBumper.gd" type="Script" id=1]
[ext_resource path="res://levelbumper/level-animation.png" type="Texture" id=2]
[ext_resource path="res://levelselect/digits.png" type="Texture" id=3]
[ext_resource path="res://freddy/freddy.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 34, 40, 34 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 40, 34, 40, 34 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 40, 34 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 40, 0, 40, 34 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "cry",
"speed": 12.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 160, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 160, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 160, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 160, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 160, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 80, 160, 16 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[node name="LevelBumper" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 512.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FreddySprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "walk"
frame = 1
playing = true

[node name="LevelSprite" type="AnimatedSprite" parent="."]
position = Vector2( 240, 256 )
frames = SubResource( 12 )
frame = 5

[node name="Num1" type="Sprite" parent="."]
position = Vector2( 356, 256 )
texture = ExtResource( 3 )
hframes = 5
vframes = 3
frame = 9

[node name="Num2" type="Sprite" parent="."]
position = Vector2( 388, 256 )
texture = ExtResource( 3 )
hframes = 5
vframes = 3
frame = 9
